# git-prune-branches

./: Cargo.toml  README.md  flake.nix
.github/workflows/: tag.yaml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
flake-parts/: cargo.nix  rust-toolchain.nix  shells.nix
