[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/justinrubek/git-prune"
repository = "https://github.com/justinrubek/git-prune"
authors = ["Justin Rubek"]

[workspace.dependencies]
thiserror = "1.0.38"
tracing = "0.1.37"
