[package]
name = "git-prune-branches"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
gix = "0.61.0"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
